--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "n8n-nodes-ip2location",
   "version": "0.1.0",
-  "description": "",
+  "description": "An N8N node for IP2Location API",
   "keywords": [
-    "n8n-community-node-package"
+    "n8n-community-node-package",
+    "ip2location"
   ],
   "license": "MIT",
-  "homepage": "",
-  "author": {
-    "name": "",
-    "email": ""
-  },
+  "homepage": "https://github.com/jabbson/n8n-nodes-ip2location.git",
   "repository": {
     "type": "git",
     "url": "https://github.com/jabbson/n8n-nodes-ip2location.git"
