--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   ],
   "license": "MIT",
   "homepage": "https://github.com/jabbson/n8n-nodes-ip2location.git",
+    "author": {
+    "name": "jabbson",
+    "email": "info@jabbson.xyz"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/jabbson/n8n-nodes-ip2location.git"
